--- a/wordle_phoenix/lib/wordle_phoenix_web/templates/page/row.html.heex
+++ b/wordle_phoenix/lib/wordle_phoenix_web/templates/page/row.html.heex
@@ -1,7 +1,6 @@
+
 <div class="inline-block m-5">
-    <%= render "square.html", assigns %>
-    <%= render "square.html", assigns %>
-    <%= render "square.html", assigns %>
-    <%= render "square.html", assigns %>
-    <%= render "square.html", assigns %>
+    <%= for letter_guess <- @word_guess do %>
+        <%= render "square.html", letter_guess: letter_guess %>
+    <% end %>
 </div>
