--- a/wordle_phoenix/lib/wordle_phoenix_web/templates/layout/app.html.heex
+++ b/wordle_phoenix/lib/wordle_phoenix_web/templates/layout/app.html.heex
@@ -1,3 +1,6 @@
+<head>
+  <%= csrf_meta_tag() %>
+</head>
 <main class="container">
   <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
   <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
