--- a/wordle_phoenix/lib/wordle_phoenix_web/templates/page/game_board.html.heex
+++ b/wordle_phoenix/lib/wordle_phoenix_web/templates/page/game_board.html.heex
@@ -1,8 +1,5 @@
-<div class="flex flex-col max-w-7xl py-16 px-4 sm:py-24 sm:px-6 lg:px-8 text-gray-400 items-center">
-    <%= render "row.html", assigns %>
-    <%= render "row.html", assigns %>
-    <%= render "row.html", assigns %>
-    <%= render "row.html", assigns %>
-    <%= render "row.html", assigns %>
-    <%= render "row.html", assigns %>
-  </div>
+<div class="flex flex-col text-gray-400 items-center">
+  <%= for word_guess <- @guesses_list do %>
+   <%= render "row.html", word_guess: word_guess %> 
+  <% end %>
+</div>
