add current guess to UI

--- a/wordle_phoenix/lib/wordle_phoenix_web/templates/page/keyboard.html.heex
+++ b/wordle_phoenix/lib/wordle_phoenix_web/templates/page/keyboard.html.heex
@@ -1,36 +1,36 @@
 <div id="keyboard" class="flex flex-col items-center">
     <div id="keyboard-top-row" class="m-5">
-      <kbd class="bg-gray-400 p-3">Q</kbd>
-      <kbd class="bg-gray-400 p-3">W</kbd>
-      <kbd class="bg-gray-400 p-3">E</kbd>
-      <kbd class="bg-gray-400 p-3">R</kbd>
-      <kbd class="bg-gray-400 p-3">T</kbd>
-      <kbd class="bg-gray-400 p-3">Y</kbd>
-      <kbd class="bg-gray-400 p-3">U</kbd>
-      <kbd class="bg-gray-400 p-3">I</kbd>
-      <kbd class="bg-gray-400 p-3">O</kbd>
-      <kbd class="bg-gray-400 p-3">P</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">Q</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">W</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">E</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">R</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">T</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">Y</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">U</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">I</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">O</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">P</kbd>
     </div>
     <div id="keyboard-middle-row" class="m-5">
-      <kbd class="bg-gray-400 p-3">A</kbd>
-      <kbd class="bg-gray-400 p-3">S</kbd>
-      <kbd class="bg-gray-400 p-3">D</kbd>
-      <kbd class="bg-gray-400 p-3">F</kbd>
-      <kbd class="bg-gray-400 p-3">G</kbd>
-      <kbd class="bg-gray-400 p-3">H</kbd>
-      <kbd class="bg-gray-400 p-3">J</kbd>
-      <kbd class="bg-gray-400 p-3">K</kbd>
-      <kbd class="bg-gray-400 p-3">L</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">A</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">S</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">D</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">F</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">G</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">H</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">J</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">K</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">L</kbd>
     </div>
     <div id="keyboard-bottom-row" class="m-5">
-      <kbd class="bg-gray-400 p-3">ENTER</kbd>
-      <kbd class="bg-gray-400 p-3">Z</kbd>
-      <kbd class="bg-gray-400 p-3">X</kbd>
-      <kbd class="bg-gray-400 p-3">C</kbd>
-      <kbd class="bg-gray-400 p-3">V</kbd>
-      <kbd class="bg-gray-400 p-3">B</kbd>
-      <kbd class="bg-gray-400 p-3">N</kbd>
-      <kbd class="bg-gray-400 p-3">M</kbd>
-      <kbd class="bg-gray-400 p-3">BACK</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">ENTER</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">Z</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">X</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">C</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">V</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">B</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">N</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">M</kbd>
+      <kbd class="bg-gray-400 p-3 rounded-sm">BACK</kbd>
     </div>
   </div>
