--- a/wordle_phoenix/lib/wordle_phoenix_web/templates/page/game_board.html.heex
+++ b/wordle_phoenix/lib/wordle_phoenix_web/templates/page/game_board.html.heex
@@ -1,5 +1,16 @@
-<div class="flex flex-col text-gray-400 items-center">
-  <%= for word_guess <- @guesses_list do %>
+<% guess_chars = String.pad_trailing(@game_state.current_guess, 5) 
+|> String.to_charlist() %>
+<% new_guess = Enum.map(guess_chars, 
+fn 
+32 -> {:initial, raw("&nbsp;")}
+letter -> {:initial, to_string([letter])} 
+end)
+ %>
+
+
+<div class="flex flex-col text-gray-400 items-center pt-12">
+  <%= for word_guess <- @game_state.guesses do %>
    <%= render "row.html", word_guess: word_guess %> 
   <% end %>
+  <%= render "row.html", word_guess: new_guess %>
 </div>
