--- a/wordle_phoenix/lib/wordle_phoenix_web/templates/page/index.html.heex
+++ b/wordle_phoenix/lib/wordle_phoenix_web/templates/page/index.html.heex
@@ -1,4 +1,5 @@
 <% game_state = %{
+  current_guess: "cat",
   secret_word: "start", 
   max_turns: 6, 
   turn_status: :continue,
@@ -6,14 +7,11 @@
             [partial: "r", incorrect: "e", correct: "a", incorrect: "c", correct: "t"],
             [incorrect: "m", incorrect: "o", incorrect: "u", partial: "s", incorrect: "e"],
             [partial: "t", partial: "a", partial: "r", partial: "t", partial: "s"],
-            [partial: "r", incorrect: "o", incorrect: "m", partial: "a", incorrect: "n"],
-            [incorrect: "m", incorrect: "o", incorrect: "u", correct: "r", incorrect: "n"]],
+            [partial: "r", incorrect: "o", incorrect: "m", partial: "a", incorrect: "n"]],
             remaining_letters: Enum.map(Enum.to_list(?a..?z), fn(n) -> <<n>> end)
 } %>
 
-<% guesses_list = game_state.guesses %>
-
 <section class="bg-gray-700 w-screen h-screen">
-  <%= render "game_board.html", guesses_list: guesses_list %>
+  <%= render "game_board.html", game_state: game_state %>
   <%= render "keyboard.html", assigns %>
 </section>
